--- a/trainstaright/index - 複製.html
+++ b/trainstaright/index - 複製.html
@@ -54,8 +54,9 @@
       <a href="javascript:void(0)" class="scene" data-id="9-">
         <li class="text">松車外面全家</li>
       </a>
-	  <a href="../首頁" class="scene" data-id="9-">
-        <li class="text">回首頁</li>
+    
+      <a href="javascript:void(0)" class="scene" data-id="10-">
+        <li class="text">松車外面停車場</li>
       </a>
     
   </ul>
