--- a/trainstaleft/index.html
+++ b/trainstaleft/index.html
@@ -34,6 +34,9 @@
       <a href="javascript:void(0)" class="scene" data-id="4-">
         <li class="text">松車南出口</li>
       </a>
+	  <a href="../首頁" class="scene" data-id="9-">
+        <li class="text">回首頁</li>
+      </a>
     
   </ul>
 </div>
